2006-09-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* OGoContentStore/OCSiCalFieldExtractor.m: use CardGroup's
	groupsOfClass:fromSource: to parse the given vcalendar.

	* UI/Scheduler/iCalRecurrenceRule+SOGo.m: removed obsolete class.

	* UI/Scheduler/SOGoAppointment+UIx.h: removed obsolete class.

	* SoObjects/SOGo/SOGoAppointmentICalRenderer.[hm]: removed
	obsolete class.

	* SoObjects/SOGo/SOGoAppointment.[hm]: removed obsolete class.

2006-09-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -lookupName:inContext:acquire:]): be
	sensitive to the CalDAV method names.
	([SOGoAppointmentFolder -doCalendarQuery:context]): method for the
	"calendar-query" CalDAV method name.

	* UI/WebServerResources/ContactsUI.js: removed a lot of useless
	code coming originally from MailerUI.js.

	* UI/WebServerResources/UIxContactEditor.js: imitate the
	Thunderbird address book by completing the display name with the
	content of the first and last name fields, until the display name
	is modified manually.

	* UI/WebServerResources/generic.js: added a "trim" method to the
	String class.

	* UI/Contacts/UIxContactsListViewBase.m ([UIxContactsListViewBase
	-displayName]): new method that returns the display name from "cn"
	or from the "displayName" key if found.

	* UI/Contacts/UIxContactEditor.m ([UIxContactEditor
	-initSnapshot]): check if "[card n]" returns anything to avoid a
	crash.

	* UI/Common/UIxPageFrame.m ([UIxPageFrame -doctype]): new method
	that returns an unparsed doctype definition for the pages.

	* SoObjects/Contacts/SOGoContactLDAPEntry.m ([SOGoContactLDAPEntry
	-vCard]): set the card's fn to attribute "displayName" if found
	before "cn".

2006-09-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactLDAPEntry.m ([SOGoContactLDAPEntry
	-vCard]): handle the "streetAddress" and "l" fields.

	* UI/Templates/MailerUI/UIxMailEditor.wox: arranged the message